<resources>
    <string name="app_name">VLSM</string>
    <string name="app_name_login">VLSM login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name_project">Name Project</string>
    <string name="date_project">Date project</string>

    <string name="text_home" type="id">Text jom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_nodos"># Nodos</string>
    <string name="description_group_nodes">Description Group Nodes</string>
    <string name="start_ip">Start IP: a.b.c.d</string>
    <string name="end_ip">End IP: a.b.c.d</string>
    <string name="delete_selection">Delete selection</string>
    <string name="prompt_user">User</string>

</resources>