<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    >

    <LinearLayout
        android:id="@+id/container_subred_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:id="@+id/txt_number_nodos_subred"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/num_nodos"
            android:layout_weight="3"
            />
        <TextView
            android:id="@+id/txt_subred_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/description_group_nodes"
            android:layout_weight="7"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_subred_start_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_subred_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:id="@+id/txt_subred_start_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/start_ip"
            android:layout_weight="5"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_subred_final_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_subred_start_ip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:id="@+id/txt_subred_final_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/end_ip"
            android:layout_weight="5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_subred_mask_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_subred_final_ip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:id="@+id/txt_subred_mask_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Mask: a.b.c.d o n"
            android:layout_weight="5"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>